# layer6x6

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  STATUS.md  deny.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  self-hosted-ci.yml  self-hosted-fuzz-nightly.yml
Plan/: Build-Plan.md  Phase-0-Plan.md  Phase-1-Plan.md  Phase-2-Plan.md  Phase-3-Plan.md  Phase-4-Plan.md  Phase-5-Plan.md  Phase-6-Plan.md  Phase-7-Plan.md
apps/layer36-cat/: Cargo.toml  manifest.toml
apps/layer36-cat/src/: bindings.rs  lib.rs
apps/layer36-clock/: Cargo.toml  manifest.toml
apps/layer36-clock/src/: bindings.rs  lib.rs
apps/layer36-curl/: Cargo.toml  manifest.toml
apps/layer36-curl/src/: bindings.rs  lib.rs
crates/adapter-common/: Cargo.toml
crates/adapter-common/src/: lib.rs  locale.rs  net.rs  path.rs  ui.rs
crates/adapter-linux/: Cargo.toml
crates/adapter-linux/src/: lib.rs
crates/adapter-macos/: Cargo.toml
crates/adapter-macos/src/: appkit.rs  lib.rs
crates/adapter-windows/: Cargo.toml
crates/adapter-windows/src/: lib.rs
crates/bindings-rust/: Cargo.toml  README.md
crates/bindings-rust/src/: bindings.rs  lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/layout/: Cargo.toml
crates/layout/benches/: layout.rs
crates/layout/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: startup.rs  uapi_dispatch.rs
crates/runtime/examples/: phase3_appkit_runtime_smoke.rs
crates/runtime/src/: lib.rs  phase2_bindings.rs  phase2_bridge.rs  phase2_host.rs  phase3_ui.rs  uapi.rs  uapi_dispatch.rs
crates/tools/: Cargo.toml
docs/adr/: 0001-rust-for-runtime.md  0002-wasmtime-runtime-engine.md  0003-component-model-from-day-one.md  0006-wit-versioning-strategy.md  0007-ucap-soft-enforcement.md  0008-host-async-runtime.md  0010-locale-timezone-discovery-fallbacks.md  0012-adapter-crate-split-per-os.md  0013-widget-lowering-strategy.md  README.md  template.md
docs/book/: book.toml  mermaid-render.js
docs/book/src/: SUMMARY.md  architecture.md  concepts.md  glossary.md  introduction.md  progress-for-everyone.md  quickstart.md  references.md  roadmap.md  vision.md  wit-style.md
docs/book/src/blog/: 0001-announcing-layer36.md
docs/book/src/contributing/: adrs.md  ci-and-runners.md  first-pr.md  fuzzing.md  index.md  setup.md  wit-style.md
docs/book/src/pages/: layer36-explained.html  layer36-live-proof.html  layer36-scripted-demo-voiceover.txt  layer36-scripted-demo.html
docs/book/src/phase1/: benchmark-baseline.json  benchmarks.md  retro.md  threat-model.md
docs/book/src/phase2/: adapter-evidence.md  benchmark-evidence.md  benchmarks.md  ci-stability-evidence.md  dependency-evidence.md  exit-bundle.md  exit-evidence.md  exit-readiness.md  fuzz-evidence.md  hosted-full-ci-evidence.md  language-variant-evidence.md  migrating-from-phase1.md  retro.md  rust-sdk-evidence.md  sample-evidence.md  self-hosted-evidence.md  threat-model-v0-2.md  uapi-freeze-evidence.md  uapi-freeze-lock.md  uapi-freeze-review-evidence.md  uapi-freeze-review.md  ucap-enforcement-evidence.md  walkthrough-evidence.md
docs/book/src/phase3/: layout.md  uapi-draft.md  widget-protocol.md
docs/book/src/phases/: phase-0-retro.md  phase-0-status.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
docs/book/src/reference/uapi/: index.md
docs/book/src/uapi/: first-go-cli.md  first-rust-cli.md  first-typescript-cli.md  go-sdk.md  overview.md  rust-sdk.md  typescript-sdk.md
docs/community/: discord-setup.md  good-first-issues.md
docs/governance/: github-setup.md  phase-1-kickoff-issue.md  phase-2-kickoff-issue.md
docs/legal/: founder-ip.md  oneos-trademark-search.md  trademark-search.md
docs/legal/launch/: twitter-thread.md
docs/rfc/: 0003-widget-protocol.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: logical_path_parse.rs  manifest_parse.rs  policy_match.rs
scripts/: build-hello-component.sh  build-layer36-cat-component.sh  build-layer36-clock-component.sh  build-layer36-curl-component.sh  build-phase1-components.sh  build-phase2-go-variant-smoke.sh  build-phase2-language-variant-fixtures.sh  check-benchmark-regression.sh  check-dependencies.sh  check-phase2-rust-walkthrough-rehearsal.sh  check-phase2-walkthrough-evidence.sh  check-phase3-design-docs.sh  check-phase3-layout.sh  check-phase3-uapi.sh  check-uapi-freeze-lock.sh  check-uapi.sh  compare-phase2-adapter-evidence.sh  compare-phase2-sample-evidence.sh  generate-uapi-freeze-lock.sh  generate-uapi-reference.sh  package.sh  phase2-exit-readiness.sh  promote-phase2-go-runtime-fixtures.sh  record-phase2-adapter-evidence.sh  record-phase2-dependency-evidence.sh  record-phase2-exit-bundle.sh  record-phase2-fuzz-evidence.sh  record-phase2-hosted-full-ci-evidence.sh  record-phase2-language-variant-evidence.sh  record-phase2-rust-sdk-evidence.sh  record-phase2-sample-evidence.sh  record-phase2-self-hosted-evidence.sh  record-phase2-uapi-freeze-review.sh  record-phase2-ucap-evidence.sh  record-phase2-walkthrough-template.sh  run-phase2-fuzz-smoke.sh  setup.sh  smoke-phase3-appkit-runtime.sh  smoke-rust-sdk.sh  test-phase1.sh  (+1 more)
test/integration/hello-world/: Cargo.toml
test/integration/hello-world/src/: bindings.rs  lib.rs
test/integration/language-variants-src/: layer36-ts-cat.mjs  layer36-ts-clock.mjs  layer36-ts-curl.mjs
test/integration/phase2-smoke/: Cargo.toml
test/integration/phase2-smoke/src/: bindings.rs  lib.rs
test/integration/print-loop/: Cargo.toml
test/integration/print-loop/src/: lib.rs
wit/layer36/: phase1.wit
wit/layer36/phase2/: world.wit
wit/layer36/phase3/: world.wit
