[workspace]
resolver = "2"
members = [
    "crates/manifest",
    "crates/policy",
    "crates/runtime",
    "crates/cli",
]
exclude = [
    "apps/layer36-cat",
    "apps/layer36-clock",
    "test/integration/hello-world",
    "test/integration/phase2-smoke",
    "test/integration/print-loop",
]

[workspace.package]
edition = "2021"
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
repository = "https://github.com/incyashraj/layer6x6"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasmtime = { version = "43.0.2", features = ["component-model"] }
wit-parser = "0.244.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
