[package]
name = "layer36-adapter-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
layer36-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSGraphics", "NSResponder", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry", "NSObject", "NSString", "objc2-core-foundation"] }
