[package]
name = "layer36-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
layer36-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
