[package]
name = "layer36-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
layer36-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
layer36-manifest = { path = "../manifest", version = "0.1.0-dev" }
thiserror.workspace = true
