[package]
name = "layer36-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["phase2-bindings"]
phase2-bindings = []

[dependencies]
layer36-manifest = { path = "../manifest", version = "0.1.0-dev" }
layer36-policy = { path = "../policy", version = "0.1.0-dev" }
thiserror.workspace = true
tracing.workspace = true
wasmtime.workspace = true

[dev-dependencies]
criterion.workspace = true
wit-parser.workspace = true

[[bench]]
name = "startup"
harness = false
