[package]
name = "layer36-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
layer36-manifest = { path = "../manifest", version = "0.1.0-dev" }
sha2 = "0.10.9"
wasmparser.workspace = true
wit-parser.workspace = true
