[package]
name = "phase2-smoke"
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/incyashraj/layer6x6"
rust-version = "1.91"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "layer36:phase2-smoke"

[package.metadata.component.target]
path = "../../../wit/layer36/phase2"
world = "cli"

[package.metadata.component.target.dependencies]
"layer36:io" = { path = "../../../wit/layer36/phase2/deps/io" }
"layer36:fs" = { path = "../../../wit/layer36/phase2/deps/fs" }
"layer36:net" = { path = "../../../wit/layer36/phase2/deps/net" }
"layer36:time" = { path = "../../../wit/layer36/phase2/deps/time" }
"layer36:locale" = { path = "../../../wit/layer36/phase2/deps/locale" }

[profile.release]
panic = "abort"
